<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/barChartView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity"
    android:background="@drawable/backgroundimg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        tools:ignore="contentDescription"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="-32dp"
        android:layout_marginStart="-32dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/ImageView" />

    <FrameLayout
        android:id="@+id/chartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/arrowRight">


        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/arrowLeft"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_left_24dp"
        android:background="#0000"
        tools:ignore="contentDescription"
        android:layout_gravity="start|bottom"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignTop="@+id/month"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/arrowRight"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_right_24dp"
        android:background="#0000"
        android:layout_gravity="end|bottom"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/month"
        android:layout_toEndOf="@+id/month"
        tools:ignore="contentDescription" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/month"
        android:id="@+id/month"
        android:layout_gravity="start|bottom"
        android:layout_below="@+id/chartLayout"
        android:layout_toRightOf="@+id/arrowLeft"
        android:layout_toEndOf="@+id/arrowLeft"
        android:textSize="15sp" />

    <Switch
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textOn="@string/percent"
        android:textOff="@string/pound"
        android:id="@+id/switchButton"
        android:layout_gravity="end|bottom"
        android:layout_below="@+id/chartLayout"
        android:layout_alignRight="@+id/chartLayout"
        android:layout_alignEnd="@+id/chartLayout" />

</RelativeLayout>

