<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/annualChartView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.co.irokottaki.moneycontrol.Activity.AnnualChartActivity"
    android:background="@drawable/backgroundimg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="-32dp"
        android:layout_marginStart="-32dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/ImageView" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:contentDescription="@string/leftYearButton"
        android:id="@+id/leftYearButton"
        android:src="@drawable/arrow_left_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0000" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:id="@+id/rigthYearButton"
        android:contentDescription="@string/rightYearButton"
        android:src="@drawable/arrow_right_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/annualChartLayout"
        android:layout_alignEnd="@+id/annualChartLayout"
        android:background="#0000"
        android:layout_alignBottom="@+id/yearlabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/year"
        android:id="@+id/yearlabel"
        android:layout_alignBottom="@+id/leftYearButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/textview"
        android:id="@+id/circleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/leftYearButton"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:id="@+id/specificExpensesOfYear"
        android:layout_toEndOf="@+id/circleTextview"
        android:layout_toRightOf="@+id/circleTextview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/annualChartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/circleTextview"
        android:layout_above="@+id/specificExpensesOfYear"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
